new puzzle and fix resetState

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="app">
 
         <h1>Jueguito de conexiones</h1>
-        <h2>Porque no era tan difícil hacerlo bien</h2>
+        <h2>En periodo de prueba :-)</h2>
         <p id="messages">Selecciona cuatro casillas, tienes <b>4</b> intentos.</p>
         <div class="container">
             <div id="grid">
