mostrar fecha y guardar estado en un solo localstorage

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <h1>Jueguito de conexiones</h1>
         <h2>En periodo de prueba :-)</h2>
+        <h4 id="gametitle"></h4>
         <p id="messages">Selecciona cuatro casillas, tienes <b>4</b> intentos.</p>
         <div class="container">
             <div id="grid">
